# analyses_friends_annotations

./: .gitignore  .gitmodules  README.md  myst.yml
.github/workflows/: deploy.yml
docs/: config.json  group-editing.html  group-editing.json  group-manual-seg.html  group-manual-seg.json  group-saliency-copy1.html  group-saliency-copy1.json  index.html  myst.search.json  myst.xref.json  objects.inv  paper.json
friends_pack/: README.md  pyproject.toml
friends_pack/src/friends_pack/: __init__.py  boolean_friends_plotter.py  friendsTSV.py
notebooks/: combined_peak_scenes.ipynb  explore_editing.ipynb  explore_manual_seg.ipynb  explore_saliency.ipynb  explore_saliency_peak.ipynb  explore_saliency_rating.ipynb  explore_transcript.ipynb  group_editing.ipynb  group_manual_seg.ipynb  group_saliency.ipynb  group_transcript.ipynb  merge_segments_peak.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  explore_editing-checkpoint.ipynb  explore_manual_seg-checkpoint.ipynb  explore_saliency-checkpoint.ipynb  explore_saliency_peak-checkpoint.ipynb  explore_saliency_rating-checkpoint.ipynb  group_manual_seg-checkpoint.ipynb  group_saliency-checkpoint.ipynb
